Added final results and documentations

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,6 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "3d78ffd3",
+   "metadata": {},
+   "source": [
+    "## Table of Contents\n",
+    "\n",
+    "1. [Step 1: Export images from QuPath and setup directories](#step-1-export-images-from-qupath-and-setup-directories)\n",
+    "2. [Step 2: Setup environment to run YOLO model](#step-2-setup-environment-to-run-yolo-model)\n",
+    "3. [Step 3: Convert image masks to labels](#step-3-convert-image-masks-to-labels)\n",
+    "4. [Step 4: Validate created labels through visualization](#step-4-validate-created-labels-through-visualization)\n",
+    "5. [Step 5: Train model](#step-5-train-model)\n",
+    "6. [Step 6: Validate trained model](#step-6-validate-trained-model)\n",
+    "7. [Step 7: Repeat steps 5-6 with different versions of YOLO model and parameters until the requirements are met](#step-7-repeat-steps-5-6-with-different-versions-of-yolo-model-and-parameters-until-the-requirements-are-met)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "511de9d1-cfdc-4684-8eb8-acc191db98eb",
    "metadata": {},
    "source": [
@@ -15,7 +31,7 @@
    "id": "2506f93c-c7a0-4736-9578-b889c5bcd92f",
    "metadata": {},
    "source": [
-    "- Export images from QuPath Using 'export ...' script located in this folder.\n",
+    "- Export images from QuPath Using 'export_image_annotations_v2.groovy' script located in this folder.\n",
     "- Once all images are exported:\n",
     "    - Split the images into training and test sets, and move the images into 'train' and 'val' (for test) folders.\n",
     "    - Inside both 'train' and 'val' folders, create three new folders:\n",
@@ -287,7 +303,12 @@
     "\n",
     "# Train a custom model\n",
     "model = YOLO(\"yolov8n-seg.pt\")\n",
-    "model.train(data=\"data_seg_config.yaml\", epochs=100, imgsz=640, batch=4, close_mosaic=0, project='bd', flipud=0.5, mosaic=0.5)"
+    "model.train(data=\"data_seg_config.yaml\", epochs=100, imgsz=640, batch=4, close_mosaic=0, project='bd', flipud=0.5, mosaic=0.5)\n",
+    "\n",
+    "# OR\n",
+    "\n",
+    "model = YOLO(\"yolov8n.pt\")\n",
+    "model.train(data=\"data_seg_config.yaml\", epochs=300, imgsz=640)"
    ]
   },
   {
@@ -405,12 +426,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "b206a22f-7d0a-4c19-95d3-9d81dfbc7c4b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---------------------------------------------------------------------------------------------\n",
+    "### Findings and Recommendations:\n",
+    "--------------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f17f610",
+   "metadata": {},
+   "source": [
+    "In Step 1, we exported the images using the default resolution of 1960 x 1200 as specified in the script. We encountered an issue with exporting annotated images because they were not categorized into Tumor or other classifications. Consequently, the export script generated zero annotated images. To resolve this, we classified all annotations as Tumor in QuPath and saved the images before re-running the export script. This adjustment produced the expected annotated images and masks.\n",
+    "\n",
+    "In Step 2, after setting up the necessary environments, Step 3 involved converting the image masks (.png) into YOLO label format (.txt) files. We experimented with various conversion scripts and selected the most effective one. Validation of the labels, as detailed in Step 4, was crucial.\n",
+    "\n",
+    "After validating the images and labels, we proceeded to model training in Step 5. We tested different hyperparameters and YOLOv8 versions (v8n, v8x, v8n-seg, v8n-p2, etc.). Initially, the model failed to detect cells effectively. However, after numerous trials, we discovered that lowering the image resolution in Step 1 and adjusting the epochs to 100-300 improved accuracy and detection rates. Due to limited computing resources, we used the paid version of Google Colab (Pro) for training.\n",
+    "\n",
+    "Once the model was trained, we validated its performance using the prediction function. Although it detected some cells, it missed others. To enhance detection, we applied SAHI inference (Step 6), which improves detection by dividing the image into smaller sections, processing each section, and then reconstructing the full image with enhanced predictions.\n",
+    "\n",
+    "Repeat Steps 5 and 6 with different parameters and models as needed until deployment readiness. Due to time constraints and an incomplete model, we could not progress further. To improve the model, consider the following recommendations:\n",
+    "\n",
+    "- Increase Input Data: Ultralytics suggests using at least 1500 images and 10,000 annotations per class.\n",
+    "- Explore Newer Models: Test newer YOLO versions (v9, v10) and other models like Mask R-CNN or RetinaNet.\n",
+    "- Use Polygon Annotations: Consider models compatible with polygon-shaped annotations for improved accuracy. Mask R-CNN supports polygons and may offer better performance than YOLO, which converts polygons into rectangles.\n",
+    "- Utilize Cloud Services: For more computing power, use platforms like Google Colab Pro or Kaggle, which can significantly speed up the training process, especially under tight deadlines."
+   ]
   }
  ],
  "metadata": {
