Updated README file

--- a/main.ipynb
+++ b/main.ipynb
@@ -241,7 +241,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "c2499526-482b-47ea-9c2e-19e7ab77f72e",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
